<resources>
    <string name="app_name">Brastlewark</string>
    <string name="template_height">H: %.2f m.</string>
    <string name="template_weight">W: %.2f kg.</string>
    <string name="template_age">Age: %d years</string>
    <string name="template_jobs">Jobs: %d</string>
    <string name="template_hair_color">Hair Color: %s</string>
    <string name="template_min">Min: %.2f</string>
    <string name="template_max">Max: %.2f</string>
    <string name="template_val">Val: %.2f</string>
    <string name="label_menu_search">Search</string>
    <string name="label_menu_filter">Filter</string>
    <string name="label_age">Age</string>
    <string name="label_height">Height</string>
    <string name="label_weight">Weight</string>
    <string name="label_apply">Apply</string>
    <string name="label_try_again">Try Again</string>
</resources>
