<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/radius_short"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvFilterAge"
            style="@style/Subtitle"
            android:layout_margin="@dimen/dimen_medium"
            android:text="@string/label_age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarAge"
            android:layout_width="@dimen/dimen_adjustable"
            android:layout_height="@dimen/dimen_large"
            android:layout_margin="@dimen/dimen_medium"
            app:layout_constraintBottom_toBottomOf="@id/tvFilterAge"
            app:layout_constraintLeft_toRightOf="@id/tvFilterAge"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvFilterAge" />

        <TextView
            android:id="@+id/tvFilterAgeMin"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintLeft_toLeftOf="@id/seekbarAge"
            app:layout_constraintTop_toBottomOf="@id/seekbarAge" />

        <TextView
            android:id="@+id/tvFilterAgeMax"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintRight_toRightOf="@id/seekbarAge"
            app:layout_constraintTop_toBottomOf="@id/seekbarAge" />


        <TextView
            android:id="@+id/tvFilterWeight"
            style="@style/Subtitle"
            android:layout_margin="@dimen/dimen_medium"
            android:text="@string/label_weight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilterAgeMin" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarWeight"
            android:layout_width="@dimen/dimen_adjustable"
            android:layout_height="@dimen/dimen_large"
            android:layout_margin="@dimen/dimen_medium"
            app:layout_constraintBottom_toBottomOf="@id/tvFilterWeight"
            app:layout_constraintLeft_toRightOf="@id/tvFilterWeight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvFilterWeight" />

        <TextView
            android:id="@+id/tvFilterWeightMin"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintLeft_toLeftOf="@id/seekbarWeight"
            app:layout_constraintTop_toBottomOf="@id/seekbarWeight" />

        <TextView
            android:id="@+id/tvFilterWeightAgeMax"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintRight_toRightOf="@id/seekbarWeight"
            app:layout_constraintTop_toBottomOf="@id/seekbarWeight" />


        <TextView
            android:id="@+id/tvFilterHeight"
            style="@style/Subtitle"
            android:layout_margin="@dimen/dimen_medium"
            android:text="@string/label_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilterWeightMin" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarHeight"
            android:layout_width="@dimen/dimen_adjustable"
            android:layout_height="@dimen/dimen_large"
            android:layout_margin="@dimen/dimen_medium"
            app:layout_constraintBottom_toBottomOf="@id/tvFilterHeight"
            app:layout_constraintLeft_toRightOf="@id/tvFilterHeight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvFilterHeight" />

        <TextView
            android:id="@+id/tvFilterHeightMin"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintLeft_toLeftOf="@id/seekbarHeight"
            app:layout_constraintTop_toBottomOf="@id/seekbarHeight" />

        <TextView
            android:id="@+id/tvFilterHeightAgeMax"
            style="@style/Body2"
            android:layout_margin="@dimen/dimen_short"
            android:text="@string/template_min"
            app:layout_constraintRight_toRightOf="@id/seekbarHeight"
            app:layout_constraintTop_toBottomOf="@id/seekbarHeight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_apply"
            android:layout_margin="@dimen/dimen_xlarge"
            app:layout_constraintTop_toBottomOf="@id/tvFilterHeightMin"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_short"
        android:visibility="invisible"
        android:layout_margin="@dimen/dimen_medium"
        android:src="@drawable/ic_ornament"/>


</androidx.cardview.widget.CardView>